@@ -1,3 +1,9 @@
+2004-12-29  Marco Gerards  <metgerards@student.han.nl>
+
+	* normal/cmdline.c (grub_cmdline_get): Redone logic so no empty
+	lines are inserted and make it work like readline.  Reported by
+	Vincent Pelletier <subdino2004@yahoo.fr>.
+
 2004-12-28  Marco Gerards  <metgerards@student.han.nl>
 
 	* boot/powerpc/ieee1275/crt0.S (_start): Don't set up the stack.
